# mcp-gitlab-server

./: .gitmodules  Cargo.toml  DEVELOPMENT.md  README.md  expanded_gitlab.rs
mcp-gitlab-server/: Cargo.toml
mcp-gitlab-server/src/: gitlab.rs  lib.rs  main.rs
