[workspace]
members = [
    "mcp-gitlab-server",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.6.1"
authors = ["4t145 <u4t145@163.com>"]
license = "MIT"
repository = "https://github.com/modelcontextprotocol/rust-sdk/"
description = "Rust SDK for Model Context Protocol"
keywords = ["mcp", "sdk", "tokio", "modelcontextprotocol"]
homepage = "https://github.com/modelcontextprotocol/rust-sdk"
categories = [
    "network-programming",
    "asynchronous",
]
readme = "README.md"

[workspace.dependencies]
rmcp = { path = "./rust-mcp-sdk/crates/rmcp" }
rmcp-macros = { path = "./rust-mcp-sdk/crates/rmcp-macros" }
